# sciware-testing-cpp

./: .codecov.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: sample.hpp
src/: sample.cpp
test/: CMakeLists.txt  test_add_vectors.cpp
